Add font awesome icons and update footer styling

--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,20 @@ h3, h4, h5, p {
 
     
 }
+
+.footer{
+    color: #ffffff;
+    background-color: #333;
+    padding: 5em 0 1em 0;
+    margin-bottom: 1;
+}.custom-icon {
+    margin-right: 20px; /* für größere Bildschirme */
+}
+
+@media (max-width: 768px) {
+    .custom-icon {
+        margin-right: 10px; /* für kleinere Bildschirme */
+    }
+}
+
+
