--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+body {
+    font-family: Verdana, sans-serif;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 1.43em;
+    color: #000000;
+
+}
 
 
 h1 {
@@ -18,4 +31,14 @@ h3, h4, h5, p {
 
     font-family: Verdana;
 
+}
+
+.extraInfo {
+    transition: 0.5s ease;
+    background-color: rgba(0,0,0,0);
+    box-shadow: 0px 3px 6px #00000029;
+    color: #9a9a9a;
+    text-align: center;
+    margin-top: -6.5em;
+    z-index: 0;
 }
