--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,24 @@ h3, h4, h5, p {
     font-family: Verdana;
 
 }
+.navbar-brand {
+    font-weight: bold;
+    margin-left: 20px;
+    font-size: 2em; /* Doppelt so groß */
+}
 
+.form-inline {
+    margin-right: 20px;
+}
 
+.form-inline .form-control {
+    max-width: 200px;
+}
+
+.form-inline .btn {
+    margin-left: 10px;
+    height: 100%;
+}
 
 
 .otherrecipies, img {
