--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,12 @@ h3, h4, h5, p {
     font-family: Verdana;
 
 }
+
+a:hover {
+    text-decoration: none;
+    color: black; 
+}
+
 .navbar-brand {
     font-weight: bold;
     margin-left: 20px;
@@ -45,12 +51,54 @@ h3, h4, h5, p {
     box-shadow: 0px 3px 6px #00000029;
     color: #9a9a9a;
     text-align: center;
-    margin-top: -6.5em;
+    margin-top: -8em;
     z-index: 0;
+}
+
+.extraInfoMkt p {
+    color: #c9c9c9;
+}
+
+.extraInfoMkt span {
+    color: #c9c9c9;
+    font-size:2.5rem; 
+}
+
+.recipeTitle {
+    margin-top: 5rem;
+}
+
+.recipeTitle h1, .recipeTitle h5, .stepLabel,  
+h2.title, h5.card-title, .catTitle {
+    font-family: "Merriweather", serif;
+}
+
+.stepLabel {
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+.ingredientTitle, .navbar-brand  {
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 0.2em;
 }
 
 .material-icons, .material-icons-outlined, .recipeCards {
     color: #c9c9c9;
+}
+
+.card-img-overlay p {
+    font-size: 0.8125rem;
+}
+
+h5.card-title {
+color: #333;
+}
+
+a.recipeLink, a.recipeLink:hover {
+    color: #9A9A9A;
+    cursor: pointer;
 }
 
 .container{
@@ -77,7 +125,7 @@ h3, h4, h5, p {
 .otherrecipies, img {
 
 
-    width: 150px;
+    width: 100%;
     height: 300px;
     object-fit: cover;
     margin-right: 20px;
